<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="348dp">

            <View
                android:id="@+id/view_divider6"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/line_drawable"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_value_textedit" />

            <TextView
                android:id="@+id/slack_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/slack_username"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/verified_user_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_divider7" />

            <TextView
                android:id="@+id/slack_value_textedit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/slack_name_value"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/verified_user_icon"
                app:layout_constraintStart_toStartOf="@+id/track_textview"
                app:layout_constraintTop_toBottomOf="@+id/slack_textview" />

            <TextView
                android:id="@+id/phone_value_textedit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/phone_number_value"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/phone_icon"
                app:layout_constraintStart_toStartOf="@+id/track_textview"
                app:layout_constraintTop_toBottomOf="@+id/phone_textview" />

            <TextView
                android:id="@+id/phone_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/phone_number"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/phone_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_divider6" />

            <TextView
                android:id="@+id/email_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/email"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/email_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_divider4" />

            <TextView
                android:id="@+id/email_value_textedit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/email_value"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/email_icon"
                app:layout_constraintStart_toStartOf="@+id/track_textview"
                app:layout_constraintTop_toBottomOf="@+id/email_textview" />

            <TextView
                android:id="@+id/country_value_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/country_value"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/location_icon"
                app:layout_constraintStart_toStartOf="@+id/track_textview"
                app:layout_constraintTop_toBottomOf="@+id/country_textview" />

            <TextView
                android:id="@+id/country_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/country"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/location_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_divider3" />

            <TextView
                android:id="@+id/track_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/track"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/track_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_divider" />

            <View
                android:id="@+id/view_divider7"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/line_drawable"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_value_textedit" />

            <View
                android:id="@+id/view_divider4"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/line_drawable"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/country_value_textview" />

            <View
                android:id="@+id/view_divider3"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/line_drawable"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/track_value_textview" />

            <View
                android:id="@+id/view_divider"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/line_drawable"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/my_name_textedit" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:src="@drawable/my_profile_pic"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toTopOf="@+id/my_name_textedit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="spread_inside" />


            <TextView
                android:id="@+id/my_name_textedit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/my_name"
                android:textAppearance="@style/profileTextStyle"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/view_divider"
                app:layout_constraintEnd_toEndOf="@+id/profile_image"
                app:layout_constraintStart_toStartOf="@+id/profile_image"
                app:layout_constraintTop_toBottomOf="@+id/profile_image" />

            <TextView
                android:id="@+id/track_value_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/track_value"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/track_icon"
                app:layout_constraintStart_toStartOf="@+id/track_textview"
                app:layout_constraintTop_toBottomOf="@+id/track_textview" />

            <ImageView
                android:id="@+id/track_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/track_icon"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="@+id/track_value_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/track_textview"
                app:srcCompat="@drawable/ic_track_changes_black_24dp" />

            <ImageView
                android:id="@+id/location_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/location_icon"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="@+id/country_value_textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/country_textview"
                app:srcCompat="@drawable/ic_place_black_24dp" />

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/email_icon"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="@+id/email_value_textedit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/email_textview"
                app:srcCompat="@drawable/ic_email_black_24dp" />

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/phone_icon"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="@+id/phone_value_textedit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/phone_textview"
                app:srcCompat="@drawable/ic_local_phone_black_24dp" />

            <ImageView
                android:id="@+id/verified_user_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/verified_user_icon"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="@+id/slack_value_textedit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/slack_textview"
                app:srcCompat="@drawable/ic_verified_user_black_24dp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>